--- a/templates/syllabus.html
+++ b/templates/syllabus.html
@@ -18,7 +18,7 @@
   {% else %}
   <tr class="odd">
   {% endif %}	   
-    <td class="week">{{ entry.week|format_arrow_date(0)}}</td>
+    <td class="week">{{ entry.week|format_arrow_date}</td>
     <td class="topic">{{ entry.topic }}</td>
     <td class="project">{{ entry.project}}</td>
   </tr>
