undid the sum of my previous commits

--- a/templates/syllabus.html
+++ b/templates/syllabus.html
@@ -13,6 +13,8 @@
 
 <table class="class-schedule">
   {% for entry in session.schedule %}
+  {% if entry.current %}
+  <tr class="curr">
   {% if loop.index is divisibleby 2 %}
   <tr class="even">
   {% else %}
