--- a/templates/syllabus.html
+++ b/templates/syllabus.html
@@ -15,7 +15,7 @@
   {% for entry in session.schedule %}
   {% if entry.current %}
   <tr class="curr">
-  {% if loop.index is divisibleby 2 %}
+  {% elif loop.index is divisibleby 2 %}
   <tr class="even">
   {% else %}
   <tr class="odd">
