--- a/templates/map.html
+++ b/templates/map.html
@@ -16,16 +16,16 @@
 
 
 
-<div id="mapid" style="width: 800px; height: 600px;"></div>
+<div id="mapid" style="width: 100%; height: 600px;"></div>
 <script>
     var mymap = L.map('mapid').setView([44.052071 , -123.086754], 14);     //sets focus on eugene, oregon
 
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpandmbXliNDBjZWd2M2x6bDk3c2ZtOTkifQ._QA7i5Mpkd_m30IGElHziw', {
+    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={{ session.confidental }}', {
         maxZoom: 18,
         attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, ' +
             '<a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
             'Imagery © <a href="http://mapbox.com">Mapbox</a>',
-        id: 'mapbox.streets'
+        id: 'mapbox.streets'    //this ID is one mapbox publicly gives out
     }).addTo(mymap);
 
 
@@ -41,6 +41,11 @@
 
     mymap.on('click', onMapClick);
 
+    {% for item in session.points %} //adds each point of interest to the map from the session sent from flask_map.py
+        L.marker([{{ item[1] }}, {{ item[2] }}]).addTo(mymap)
+            .bindPopup("{{ item[0] }}");
+    {% endfor %}
+    
 </script>
 
 
